apps/vaultwarden/envs/prod/ingress-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-internal
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.lab.apexvirtual.internal`)
      kind: Rule
      services:
        - name: vaultwarden
          port: http
      middlewares:
        - name: default-headers
          namespace: traefik
      priority: 10
  tls:
    secretName: vaultwarden-tls
